apps/tautulli/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tautulli
spec:
  selector:
    matchLabels:
      app: tautulli
  replicas: 1
  template:
    metadata:
      labels:
        app: tautulli
    spec:
      containers:
        - name: tautulli
          image: lscr.io/linuxserver/tautulli:2.14.3
          ports:
            - containerPort: 8181
          volumeMounts:
            - name: data
              mountPath: /config
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: tautulli
